debug: フロントでデバッグ作業

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:debug": "playwright test --debug",
+    "test:flow": "bash scripts/run-flow-tests.sh",
+    "test:flow:headed": "bash scripts/run-flow-tests.sh --headed",
+    "test:flow:ui": "bash scripts/run-flow-tests.sh --ui",
+    "test:flow:debug": "bash scripts/run-flow-tests.sh --debug",
     "docker:start": "bash scripts/docker-dev.sh start",
     "docker:stop": "bash scripts/docker-dev.sh stop",
     "docker:restart": "bash scripts/docker-dev.sh restart",
