--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,5 @@ GOOGLE_CLIENT_SECRET=your_google_client_secret
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=your_maps_api_key
 
 # データベース（Phase 8以降）
-# DATABASE_URL=your_database_url
+NEXT_PUBLIC_SUPABASE_URL: "https://[PROJECT-REF].supabase.co"
+NEXT_PUBLIC_SUPABASE_ANON_KEY: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
