--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -16,6 +16,11 @@ WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 
+# Set dummy environment variables for build
+ENV NEXT_PUBLIC_SUPABASE_URL=https://dummy.supabase.co
+ENV NEXT_PUBLIC_SUPABASE_ANON_KEY=dummy_key_for_build
+ENV SUPABASE_SERVICE_ROLE_KEY=dummy_service_role_key
+
 # Build the application
 RUN npm run build
 
