--- a/k8s/manifests/deployment.yml
+++ b/k8s/manifests/deployment.yml
@@ -17,6 +17,7 @@ spec:
       containers:
       - name: journee
         image: gcr.io/my-docker-471807/journee:latest
+        imagePullPolicy: Always
         env:
         - name: GOOGLE_APPLICATION_CREDENTIALS
           value: /app/secret/key.json
