--- a/k8s/manifests/deployment.yml
+++ b/k8s/manifests/deployment.yml
@@ -49,5 +49,20 @@ spec:
             secretKeyRef:
               name: journee-env
               key: NEXT_PUBLIC_GOOGLE_MAPS_API_KEY
+        - name: NEXT_PUBLIC_SUPABASE_URL
+          valueFrom:
+            secretKeyRef:
+              name: journee-env
+              key: NEXT_PUBLIC_SUPABASE_URL
+        - name: NEXT_PUBLIC_SUPABASE_ANON_KEY
+          valueFrom:
+            secretKeyRef:
+              name: journee-env
+              key: NEXT_PUBLIC_SUPABASE_ANON_KEY
+        - name: SUPABASE_SERVICE_ROLE_KEY
+          valueFrom:
+            secretKeyRef:
+              name: journee-env
+              key: SUPABASE_SERVICE_ROLE_KEY
         ports:
         - containerPort: 3000
