--- a/k8s/secret.template.yml
+++ b/k8s/secret.template.yml
@@ -9,3 +9,6 @@ stringData:
   GOOGLE_CLIENT_SECRET: "YOUR_GOOGLE_CLIENT_SECRET"
   NEXTAUTH_SECRET: "YOUR_NEXTAUTH_SECRET"
   NEXT_PUBLIC_GOOGLE_MAPS_API_KEY: "YOUR_GOOGLE_MAPS_API_KEY"
+  NEXT_PUBLIC_SUPABASE_URL: "YOUR_SUPABASE_URL"
+  NEXT_PUBLIC_SUPABASE_ANON_KEY: "YOUR_SUPABASE_ANON_KEY"
+  SUPABASE_SERVICE_ROLE_KEY: "YOUR_SUPABASE_SERVICE_ROLE_KEY"
