--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,5 @@
 name: deploy
-run-name: Deploy Sakamichi Penlight Quiz
+run-name: Deploy Journee
 
 on:
   workflow_dispatch:
@@ -7,18 +7,10 @@ on:
       image_tag:
         description: "Docker image tag (e.g. latest, dev, v1.0.0)"
         required: true
-        default: dev
-      release:
-        description: "Release Type (e.g. main, dev)"
-        required: true
-        default: dev
-  workflow_run:
-    workflows: ["release-action"]
-    types:
-      - completed
+        default: test
   push:
-    branches:
-      - dev
+    tags:
+      - 'v[0-9]+.[0-9]+.[0-9]+'
 
 permissions:
   contents: write
@@ -26,37 +18,14 @@ permissions:
 env:
   GCR_REGISTRY: gcr.io
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-  IMAGE_NAME: penlight/prod-view-penlight
+  IMAGE_NAME: journee
   DEPLOYMENT_FILE_PATH: k8s/manifests/deployment.yml
-  PACKAGE_JSON_PATH: view/package.json
 
 defaults:
   run:
     shell: bash
 
 jobs:
-  determine-path:
-    runs-on: ubuntu-latest
-    outputs:
-      release: ${{ steps.set-release.outputs.release }}
-      deployment_file_path: ${{ steps.set-deployment-path.outputs.deployment_file_path }}
-    steps:
-      - name: Set release
-        id: set-release
-        run: |
-          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-            echo "release=${{ github.event.inputs.release }}" >> $GITHUB_OUTPUT
-          elif [ "${{ github.event_name }}" = "push" ]; then
-            echo "release=${GITHUB_REF##*/}" >> $GITHUB_OUTPUT
-          else
-            echo "release=main" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Set deployment file path
-        id: set-deployment-path
-        run: |
-          echo "deployment_file_path=k8s/manifests/${{ steps.set-release.outputs.release }}/deployment.yml" >> $GITHUB_OUTPUT
-
   determine-image-tag:
     runs-on: ubuntu-latest
     outputs:
@@ -72,9 +41,6 @@ jobs:
         run: |
           if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
             echo "image_tag=${{ github.event.inputs.image_tag }}" >> "$GITHUB_OUTPUT"
-          elif [[ "${{ github.event_name }}" == "push" && "${{ github.ref }}" == "refs/heads/dev" ]]; then
-            short_sha=$(git rev-parse --short=8 HEAD)
-            echo "image_tag=dev-${short_sha}" >> "$GITHUB_OUTPUT"
           else
             latest_tag=$(git tag | sort -V | tail -n 1)
             echo "Using latest tag: $latest_tag"
@@ -84,14 +50,12 @@ jobs:
   docker-build-and-push-to-gcr:
     runs-on: ubuntu-latest
     needs:
-      - determine-path
       - determine-image-tag
-      - update-deployment-manifest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          ref: ${{ needs.determine-path.outputs.release }}
+          ref: main
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -106,44 +70,29 @@ jobs:
       - name: Build and Push Docker image to GCR
         uses: docker/build-push-action@v6
         with:
-          context: ./view
-          file: ./view/Dockerfile
-          target: prod
+          context: .
+          file: ./Dockerfile
           push: true
           tags: ${{ env.GCR_REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.IMAGE_NAME }}:${{ needs.determine-image-tag.outputs.image_tag }}
 
   update-deployment-manifest:
     runs-on: ubuntu-latest
     needs:
-      - determine-path
       - determine-image-tag
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          ref: ${{ needs.determine-path.outputs.release }}
+          ref: main
 
       - name: Update deployment YAML with new image tag
         uses: mikefarah/yq@v4
         with:
-          cmd: yq -i '.spec.template.spec.containers[0].image = "${{ env.GCR_REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.IMAGE_NAME }}:${{ needs.determine-image-tag.outputs.image_tag }}"' "${{ needs.determine-path.outputs.deployment_file_path }}"
+          cmd: yq -i '.spec.template.spec.containers[0].image = "${{ env.GCR_REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.IMAGE_NAME }}:${{ needs.determine-image-tag.outputs.image_tag }}"' "${{ env.DEPLOYMENT_FILE_PATH }}"
 
       - name: Check updated deployment file
         run: |
-          echo "Updated image in ${{ needs.determine-path.outputs.deployment_file_path }}"
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v5
-        if: ${{ needs.determine-path.outputs.release != 'dev' }}
-        with:
-          node-version: 22
-
-      - name: Bump version in package.json
-        if: ${{ needs.determine-path.outputs.release != 'dev' }}
-        run: |
-          cd view
-          npm version --no-git-tag-version "${{ needs.determine-image-tag.outputs.image_tag }}" 
-          cd ..
+          echo "Updated image in ${{ env.DEPLOYMENT_FILE_PATH }}"
 
       - name: Commit and push deployment update
         run: |
@@ -158,12 +107,11 @@ jobs:
     needs:
       - docker-build-and-push-to-gcr
       - determine-image-tag
-      - determine-path
     steps:
       - name: Trigger ArgoCD sync via API
         env:
           ARGOCD_TOKEN: ${{ secrets.ARGOCD_TOKEN }}
         run: |
-          curl -X POST https://argocd.aooba.net/api/v1/applications/penlight-${{ needs.determine-path.outputs.release }}/sync \
+          curl -X POST https://argocd.aooba.net/api/v1/applications/${{ env.IMAGE_NAME }}/sync \
             -H "Authorization: Bearer $ARGOCD_TOKEN" \
             -H "Content-Type: application/json"
