fix: 環境変数を修正

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ permissions:
 
 env:
   GCR_REGISTRY: gcr.io
-  PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+  PROJECT_ID: my-docker-471807
   IMAGE_NAME: journee
   DEPLOYMENT_FILE_PATH: k8s/manifests/deployment.yml
 
