--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "docker:build": "bash scripts/docker-dev.sh build",
     "docker:clean": "bash scripts/docker-dev.sh clean",
     "docker:status": "bash scripts/docker-dev.sh status",
-    "deploy:gcr": "bash scripts/deploy-gcr.sh"
+    "deploy:gcr": "bash scripts/deploy-gcr.sh",
+    "relase": "bash scripts/tag-version.sh"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.65.0",
