--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,6 +79,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - determine-image-tag
+      - docker-build-and-push-to-gcr
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -106,7 +107,6 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - docker-build-and-push-to-gcr
-      - determine-image-tag
     steps:
       - name: Trigger ArgoCD sync via API
         env:
