--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "docker:clean": "bash scripts/docker-dev.sh clean",
     "docker:status": "bash scripts/docker-dev.sh status",
     "deploy:gcr": "bash scripts/deploy-gcr.sh",
-    "relase": "bash scripts/tag-version.sh"
+    "release": "bash scripts/tag-version.sh"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.65.0",
