--- a/k8s/secret.template.yml
+++ b/k8s/secret.template.yml
@@ -12,3 +12,4 @@ stringData:
   NEXT_PUBLIC_SUPABASE_URL: "YOUR_SUPABASE_URL"
   NEXT_PUBLIC_SUPABASE_ANON_KEY: "YOUR_SUPABASE_ANON_KEY"
   SUPABASE_SERVICE_ROLE_KEY: "YOUR_SUPABASE_SERVICE_ROLE_KEY"
+  GITHUB_TOKEN: "YOUR_GITHUB_TOKEN"
