--- a/k8s/manifests/deployment.yml
+++ b/k8s/manifests/deployment.yml
@@ -16,7 +16,7 @@ spec:
         - name: gcr-pull-secret
       containers:
         - name: journee
-          image: gcr.io/my-docker-471807/journee:test1
+          image: gcr.io/my-docker-471807/journee:v2.6.2
           imagePullPolicy: Always
           env:
             - name: GOOGLE_APPLICATION_CREDENTIALS
