--- a/k8s/argocd/app.yml
+++ b/k8s/argocd/app.yml
@@ -1,12 +1,12 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: journee
+  name: journee-dev
 spec:
   project: default
   source:
     repoURL: 'https://github.com/AobaIwaki123/journee'
-    targetRevision: HEAD
+    targetRevision: dev
     path: k8s/manifests
   destination:
     server: 'https://kubernetes.default.svc'
