--- a/k8s/manifests/service.yml
+++ b/k8s/manifests/service.yml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: journee
+  name: journee-dev
   namespace: journee
 spec:
   selector:
-    app: journee
+    app: journee-dev
   ports:
   - port: 80
     targetPort: 3000
