feat: Configure auth proxy mode for multi-branch deployment
- Enable AUTH_PROXY_MODE for journee deployment
- Separate auth service (journee-auth) with AUTH_PROXY_MODE=false
- Add dev-specific manifests and ArgoCD configuration
- Update ingress rules for auth.preview.aooba.net and dev.preview.aooba.net
- Move auth-service.yml to k8s root directory
- Configure cookie domain sharing (.preview.aooba.net)

--- a/k8s/dev-manifests/deployment.yml
+++ b/k8s/dev-manifests/deployment.yml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: journee
+  name: journee-dev
   namespace: journee
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: journee
+      app: journee-dev
   template:
     metadata:
       labels:
-        app: journee
+        app: journee-dev
     spec:
       imagePullSecrets:
       - name: gcr-pull-secret
       containers:
-      - name: journee
+      - name: journee-dev
         image: gcr.io/my-docker-471807/journee:v2.6.5
         env:
         - name: GOOGLE_APPLICATION_CREDENTIALS
