--- a/k8s/dev-argocd/app.yml
+++ b/k8s/dev-argocd/app.yml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: journee
+  name: journee-dev
 spec:
   project: default
   source:
