--- a/k8s/argocd/app.yml
+++ b/k8s/argocd/app.yml
@@ -6,7 +6,7 @@ spec:
   project: default
   source:
     repoURL: 'https://github.com/AobaIwaki123/journee'
-    targetRevision: dev
+    targetRevision: main
     path: k8s/manifests
   destination:
     server: 'https://kubernetes.default.svc'
