fix: argocd app.yml

--- a/k8s/argocd-multi-deploy/app.yml
+++ b/k8s/argocd-multi-deploy/app.yml
@@ -6,7 +6,7 @@ spec:
   project: default
   source:
     repoURL: 'https://github.com/AobaIwaki123/journee'
-    targetRevision: manifests-multi-deploy
+    targetRevision: multi-deploy
     path: k8s/manifests-multi-deploy
   destination:
     server: 'https://kubernetes.default.svc'
