--- a/k8s/secret.template.yml
+++ b/k8s/secret.template.yml
@@ -13,3 +13,5 @@ stringData:
   NEXT_PUBLIC_SUPABASE_ANON_KEY: "YOUR_SUPABASE_ANON_KEY"
   SUPABASE_SERVICE_ROLE_KEY: "YOUR_SUPABASE_SERVICE_ROLE_KEY"
   GITHUB_TOKEN: "YOUR_GITHUB_TOKEN"
+  # ブランチモード（開発・テスト環境のみ：本番環境では"false"または削除）
+  ENABLE_MOCK_AUTH: "false"
