--- a/k8s/manifests/deployment.yml
+++ b/k8s/manifests/deployment.yml
@@ -23,6 +23,9 @@ spec:
               value: /app/secret/key.json
             - name: NEXTAUTH_URL
               value: https://journee.aooba.net
+            # ブランチモード設定（本番環境ではモック認証を無効化）
+            - name: ENABLE_MOCK_AUTH
+              value: "false"
             # Secretから環境変数を注入
             - name: GEMINI_API_KEY
               valueFrom:
