--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -19,8 +19,10 @@ COPY . .
 # Accept build arguments for Supabase configuration
 ARG NEXT_PUBLIC_SUPABASE_URL
 ARG NEXT_PUBLIC_SUPABASE_ANON_KEY
+ARG NEXT_PUBLIC_ENABLE_MOCK_AUTH=false
 ENV NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}
 ENV NEXT_PUBLIC_SUPABASE_ANON_KEY=${NEXT_PUBLIC_SUPABASE_ANON_KEY}
+ENV NEXT_PUBLIC_ENABLE_MOCK_AUTH=${NEXT_PUBLIC_ENABLE_MOCK_AUTH}
 
 # Build the application
 RUN npm run build
