--- a/blog/manifests/sample.yml
+++ b/blog/manifests/sample.yml
@@ -49,6 +49,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: journee
+            name: nginx
             port:
               number: 80
