--- a/.github/workflows/create-argo-app.yml
+++ b/.github/workflows/create-argo-app.yml
@@ -202,6 +202,15 @@ jobs:
             echo "✅ Committed and pushed manifests"
           fi
 
+      - name: Install ArgoCD CLI
+        if: steps.check_app.outputs.exists == 'false'
+        run: |
+          curl -sSL -o argocd https://github.com/argoproj/argocd/releases/latest/download/argocd-linux-amd64
+          sudo install -m 555 argocd /usr/local/bin/argocd
+          rm argocd
+          argocd version --client
+          echo "✅ ArgoCD CLI installed successfully"
+
       - name: Create ArgoCD Application
         if: steps.check_app.outputs.exists == 'false'
         env:
@@ -213,36 +222,11 @@ jobs:
 
           echo "🚀 Creating ArgoCD Application: $APP_NAME (branch: $BRANCH)"
 
-          curl -X POST https://${{ env.ARGOCD_SERVER }}/api/v1/applications \
-            -H "Authorization: Bearer $ARGOCD_TOKEN" \
-            -H "Content-Type: application/json" \
-            -d @- << EOF
-          {
-            "metadata": {
-              "name": "$APP_NAME"
-            },
-            "spec": {
-              "project": "default",
-              "source": {
-                "repoURL": "https://github.com/${{ github.repository }}",
-                "targetRevision": "$BRANCH",
-                "path": "k8s/manifests-$BRANCH_HASH"
-              },
-              "destination": {
-                "server": "https://kubernetes.default.svc",
-                "namespace": "journee"
-              },
-              "syncPolicy": {
-                "automated": {
-                  "selfHeal": true,
-                  "prune": true
-                }
-              }
-            }
-          }
-          EOF
+          argocd app create -f k8s/argocd-$BRANCH_HASH/app.yml \
+            --server ${{ env.ARGOCD_SERVER }} \
+            --auth-token $ARGOCD_TOKEN \
+            --grpc-web
 
-          echo ""
           echo "✅ ArgoCD Application '$APP_NAME' created successfully"
 
       - name: Skip creation
