--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -166,3 +166,76 @@ jobs:
           curl -X POST https://argocd.aooba.net/api/v1/applications/${{ env.IMAGE_NAME }}-${{ env.BRANCH_HASH }}/sync \
             -H "Authorization: Bearer $ARGOCD_TOKEN" \
             -H "Content-Type: application/json"
+
+  comment-on-pr:
+    runs-on: ubuntu-latest
+    needs:
+      - sync
+    if: success()
+    steps:
+      - name: Set short SHA
+        run: echo "SHORT_SHA=$(echo ${{ github.sha }} | cut -c1-6)" >> $GITHUB_ENV
+
+      - name: Generate branch hash
+        run: |
+          BRANCH="${{ github.ref_name }}"
+          BRANCH_HASH=$(echo -n "$BRANCH" | md5sum | cut -c1-6)
+          echo "BRANCH_HASH=$BRANCH_HASH" >> $GITHUB_ENV
+
+      - name: Find PR number
+        id: find-pr
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const { data: pulls } = await github.rest.pulls.list({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              state: 'open',
+              head: `${context.repo.owner}:${context.ref.replace('refs/heads/', '')}`
+            });
+
+            if (pulls.length > 0) {
+              return pulls[0].number;
+            }
+            return null;
+
+      - name: Comment on PR
+        if: steps.find-pr.outputs.result != 'null'
+        uses: actions/github-script@v7
+        env:
+          BRANCH_HASH: ${{ env.BRANCH_HASH }}
+          SHORT_SHA: ${{ env.SHORT_SHA }}
+        with:
+          script: |
+            const prNumber = ${{ steps.find-pr.outputs.result }};
+            const branchHash = process.env.BRANCH_HASH;
+            const shortSha = process.env.SHORT_SHA;
+            const imageTag = `${branchHash}-${shortSha}`;
+            const argocdUrl = `https://argocd.aooba.net/applications/${{ env.IMAGE_NAME }}-${branchHash}`;
+
+            const body = `## 🚀 デプロイ完了
+
+            **ブランチ**: \`${{ github.ref_name }}\`
+            **コミット**: \`${shortSha}\`
+            **イメージタグ**: \`${imageTag}\`
+            **ブランチハッシュ**: \`${branchHash}\`
+
+            ### 📦 デプロイ情報
+            - **GCRイメージ**: \`${{ env.GCR_REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.IMAGE_NAME }}:${imageTag}\`
+            - **ArgoCD**: [アプリケーションを確認](${argocdUrl})
+
+            ### ✅ 完了したステップ
+            1. ✅ ArgoCD アプリケーション作成
+            2. ✅ Docker イメージビルド & プッシュ
+            3. ✅ デプロイメントマニフェスト更新
+            4. ✅ ArgoCD 同期トリガー
+
+            ---
+            *自動デプロイワークフロー by GitHub Actions*`;
+
+            await github.rest.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: prNumber,
+              body: body
+            });
