--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -119,3 +119,17 @@ jobs:
           curl -X POST https://argocd.aooba.net/api/v1/applications/${{ env.IMAGE_NAME }}/sync \
             -H "Authorization: Bearer $ARGOCD_TOKEN" \
             -H "Content-Type: application/json"
+
+  comment-on-discord:
+    runs-on: ubuntu-latest
+    needs:
+      - sync
+    steps:
+    - name: Notify Discord
+      run: |
+          curl -H "Content-Type: application/json" \
+          -X POST \
+          -d '{
+            "content": "本番環境へのデプロイが完了しました! https://journee.aooba.net/"
+          }' \
+          ${{ secrets.DISCORD_WEBHOOK_URL }}
