add: deploymentの環境変数にENCRYPTION_KEYを追加

--- a/k8s/manifests/deployment.yml
+++ b/k8s/manifests/deployment.yml
@@ -74,6 +74,11 @@ spec:
                 secretKeyRef:
                   name: journee-env
                   key: GITHUB_TOKEN
+            - name: ENCRYPTION_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: journee-env
+                  key: ENCRYPTION_KEY
             - name: GITHUB_OWNER
               value: AobaIwaki123
             - name: GITHUB_REPO
