--- a/k8s/secret.template.yml
+++ b/k8s/secret.template.yml
@@ -16,5 +16,6 @@ stringData:
   # APIキー暗号化用のキー（32文字以上のランダム文字列）
   # 生成方法: openssl rand -hex 32
   ENCRYPTION_KEY: "YOUR_ENCRYPTION_KEY"
+  ENCRYPTION_KEY_OLD: "YOUR_ENCRYPTION_KEY_OLD"
   # ブランチモード（開発・テスト環境のみ：本番環境では"false"または削除）
   ENABLE_MOCK_AUTH: "false"
