--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,13 @@
     ".next/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "**/*.spec.ts",
+    "**/*.spec.tsx",
+    "e2e/**/*",
+    "playwright-report/**/*",
+    "test-results/**/*"
   ]
 }
